--- a/src/components/SearchResult/_SearchResult.scss
+++ b/src/components/SearchResult/_SearchResult.scss
@@ -1,6 +1,6 @@
+//@ 存放搜尋結果容器、搜尋結果項目
 @use "../../scss/abstracts" as *;
 
-//@ 存放搜尋結果
 //- 定義 DetailCard 內在 breakpoiint sm 的卡片布局
 $search-results-column-gap: 1.25rem;
 
