--- a/src/components/WatchCards/_WatchCards.scss
+++ b/src/components/WatchCards/_WatchCards.scss
@@ -1,3 +1,4 @@
+//@ 存放 .watchcards、.watchcard
 @use "../../scss/abstracts" as *;
 
 //* .watchcards 卡片佈局設定
@@ -8,34 +9,17 @@ $watchcards-card-amount: (
    default: 6,
    xl: 5,
    lg: 4,
-   md: 4,
-   sm: 3,
+   md: 3,
+   sm: 2,
 );
 // 每列在特定斷點分別有幾個 gap?
 $watchcards-gap-amount: (
    default: 5,
    xl: 4,
    lg: 3,
-   md: 3,
-   sm: 2,
+   md: 2,
+   sm: 1,
 );
-
-// // 每列在特定斷點分別要容納幾張卡片?
-// $watchcards-card-amount: (
-//    default: 5,
-//    xl: 4,
-//    lg: 3,
-//    md: 3,
-//    sm: 2,
-// );
-// // 每列在特定斷點分別有幾個 gap?
-// $watchcards-gap-amount: (
-//    default: 4,
-//    xl: 3,
-//    lg: 2,
-//    md: 2,
-//    sm: 1,
-// );
 
 .watchcards {
    @include cards($watchcards-column-gap);
@@ -45,76 +29,55 @@ $watchcards-gap-amount: (
    $block: &;
    @include card($watchcards-column-gap, $watchcards-card-amount, $watchcards-gap-amount);
    @include flex($dir: column);
+   position: relative;
    overflow: hidden;
    background-color: map-get($color, secondary);
    animation: scale map-get($transition, 500);
+   // 螢幕 < md 時套用 hamburger bar @mixin
+   @include hamburger(
+      $width: 0.875rem,
+      $line-thickness: 0.125rem,
+      $line-gap: 0.1875rem,
+      $line-color: map-get($color, secondary)
+   );
 
-   @include md {
-      position: relative;
-      // 螢幕 < md 時套用 hamburger bar @mixin
-      @include hamburger(
-         $width: 0.875rem,
-         $line-thickness: 0.125rem,
-         $line-gap: 0.1875rem,
-         $line-color: map-get($color, secondary)
-      );
-   }
-
-   @include hover-query {
-      &:hover {
-         .watchcard__img::before {
+   //* watchcard__option-btn
+   &__option-btn {
+      @include text(base);
+      @include card-btn;
+      @include hover-query {
+         &:hover {
+            @include hover-bg-color(map-get($color, tertiary));
+         }
+      }
+      // active 狀態
+      &.active {
+         // 控制 .watchcard__btns 內的每一個子元素(.watchcard__btn)位移
+         & ~ #{$block}__btns {
+            visibility: visible;
+            opacity: 1;
+            & > :nth-child(1) {
+               transform: translateX(-150%) scale(1);
+            }
+            & > :nth-child(2) {
+               transform: translate(-125%, 125%) scale(1);
+            }
+            & > :nth-child(3) {
+               transform: translateY(150%) scale(1);
+            }
+         }
+         // 在 watchcard__option-btn 後面的 .watchcard__img 顯示暗色遮蓋
+         & ~ .watchcard__img::before {
             opacity: 1;
             visibility: visible;
          }
-         #{$block} {
-            &__title,
-            &__btns {
-               transform: translateY(0%);
-            }
-         }
       }
    }
 
-   // 切換 watchcard option 的按鈕(僅在 breakpoint < md 出現)
-   &__option-btn {
-      display: none; // 預設隱藏
-      @include text(base);
-      @include md {
-         // 斷點在 md 以下套用 card-btn 樣式
-         @include card-btn;
-         display: flex;
-         &.active {
-            // 控制 .watchcard__btns 內的每一個子元素(.watchcard__btn)位移
-            & ~ .watchcard__content > #{$block}__btns {
-               visibility: visible;
-               opacity: 1;
-               & > :nth-child(1) {
-                  transform: translateX(-150%) scale(1);
-               }
-               & > :nth-child(2) {
-                  transform: translate(-125%, 125%) scale(1);
-               }
-               & > :nth-child(3) {
-                  transform: translateY(150%) scale(1);
-               }
-            }
-            // 開啟暗色遮蓋
-            & + .watchcard__img::before {
-               background-color: rgba(0, 0, 0, 0.7);
-            }
-         }
-      }
-   }
-
-   // img 容器
+   //* img 容器
    &__img {
       width: 100%;
       height: 100%;
-      @include md {
-         // 為了避免暗色遮蓋的覆蓋範圍向下延伸到 .watchcard__title 位置，
-         // 故在螢幕寬度 < md 時(此時 .watchcard__title 會移至下方)，讓暗色遮蓋以此作為定位的參照。
-         position: relative;
-      }
       // 暗色遮蓋
       &::before {
          content: "";
@@ -127,17 +90,6 @@ $watchcards-gap-amount: (
          visibility: hidden;
          transition: map-get($transition, 300);
          transition-property: visibility, opacity;
-         @include md {
-            // 螢幕寬度 < 768px 的裝置不需要 hover、不需要暗色遮蓋，但是當 .watchcard--option-open 被套用時，
-            // 需要有暗色遮蓋。為了防止螢幕寬度 < 768px 時 hover 跑出暗色遮蓋，做以下調整:
-            //   1.將暗色遮蓋完全顯示，並將顏色調成透明，此時即使 hover 也不會跑出暗色。
-            //   2.transition-property 改成 background-color，在 .watchcard--option-onen 被套用時，
-            //     使用改變顏色的方式來做出暗色遮蓋效果。
-            opacity: 1;
-            visibility: visible;
-            background-color: rgba(0, 0, 0, 0);
-            transition-property: background-color;
-         }
       }
       // <img />
       img {
@@ -145,7 +97,7 @@ $watchcards-gap-amount: (
       }
    }
 
-   // poster
+   //* watchcard__movie-poster
    &__movie-poster {
       object-fit: cover;
       object-position: center;
@@ -153,129 +105,53 @@ $watchcards-gap-amount: (
       height: 100%;
    }
 
-   // watchcard__content
-   &__content {
-      @include flex($dir: column, $jc: space-between);
-      position: absolute;
-      z-index: 10;
-      width: 100%;
-      height: 100%;
-      border-radius: 1rem;
-      overflow: hidden;
-      @include md {
-         position: static;
-         overflow: visible;
-      }
-      a {
-         color: map-get($color, secondary);
-      }
-   }
-
-   // watchcard__title
+   //* watchcard__title
    &__title {
-      @include text(2xl);
-      padding-top: 1.25rem;
-      padding-bottom: 1.25rem;
-      padding-left: 1rem;
-      padding-right: 1rem;
+      @include ellipsis-text(1);
+      @include text(base);
+      position: relative;
+      margin-top: 1rem;
       color: map-get($color, primary);
-      transform: translateY(-200%);
-      transition: map-get($transition, 300);
-      transition-property: transform;
-      @include md {
-         @include text(base);
-         @include ellipsis-text(2);
-         margin-top: 1rem;
-         padding: 0;
-         transform: none;
-         transition: none;
-         color: map-get($color, primary);
-      }
    }
 
-   // watchcard__btns
+   //* watchcard__btns
    &__btns {
-      @include flex;
-      width: 100%;
-      margin-top: auto;
-      background-color: #ffffffc9;
-      transform: translateY(101%);
-      transition: map-get($transition, 300);
-      transition-property: transform;
-      @include md {
-         position: absolute;
-         z-index: -1;
-         right: 5%;
-         top: 5%;
-         visibility: hidden;
-         opacity: 0;
-         width: auto;
-         border-top: 0;
-         transform: none;
-         transition: map-get($transition, 300);
-         transition-property: visibility, opacity;
-         background-color: transparent;
-      }
+      position: absolute;
+      z-index: 1;
+      right: 5%;
+      top: 5%;
    }
 
-   // watchcard__btn
+   //* watchcard__btn
    &__btn {
-      @include flex($dir: column, $ai: center);
-      @include text(xs);
-      padding: 0.5rem;
-      flex: 1 0 auto;
-      width: 33.33%;
-      color: map-get($color, secondary);
+      @include rounded-full;
+      @include flex($jc: center, $ai: center);
+      @include text(lg);
+      position: absolute;
+      z-index: -10;
+      right: 0;
+      padding: 0;
+      width: 2.8125rem;
+      height: 2.8125rem;
+      background-color: map-get($color, tertiary);
+      transform: translate(0) scale(0);
       transition: map-get($transition, 300);
-      transition-property: color, background-color;
-      @include md {
-         @include rounded-full;
-         @include flex($jc: center, $ai: center);
-         position: absolute;
-         z-index: -10;
-         right: 0;
-         padding: 0;
-         width: 2.8125rem;
-         height: 2.8125rem;
-         font-size: 0;
-         background-color: map-get($color, tertiary);
-         transform: translate(0) scale(0);
-         transition: map-get($transition, 300);
-         transition-property: transform, opacity, visibility;
+      transition-property: transform, opacity, visibility;
+      @include hover-query {
+         &:hover {
+            // hover 時，將背景顏色暗化
+            @include hover-bg-color(map-get($color, tertiary));
+         }
       }
       @include xs {
          width: 2.5rem;
          height: 2.5rem;
       }
-      @include hover-query {
-         &:hover {
-            background-color: map-get($color, tertiary);
-         }
-      }
-
       // watchcard__btn 內的 <i> tag
       i {
          pointer-events: none;
-         @include md {
-            @include text(lg);
-         }
-      }
-
-      // 除了第一個 watchcard__btn 外，其餘的每個元素套用以下樣式
-      &:not(:first-child) {
-         border-left: 1px solid;
-         @include md {
-            border-left: 0;
-         }
-      }
-
-      // watchcard icon
-      i {
-         @include text(sm);
          font-weight: bold;
-         @include md {
-            @include text(lg);
-         }
+         color: map-get($color, secondary);
       }
    }
 }
