--- a/src/pages/NotFound/_NotFound.scss
+++ b/src/pages/NotFound/_NotFound.scss
@@ -9,13 +9,15 @@
     @include flex($dir: column, $ai: center);
   }
 
-  &__img {
+  //* not-found__img (not-found 背景圖容器)
+  &__img-wrapper {
     position: absolute;
     z-index: -1;
     width: 100%;
     height: 100%;
     inset: 0;
 
+    //* img tag
     img {
       width: 100%;
       height: 100%;
@@ -23,6 +25,7 @@
       object-position: bottom;
     }
 
+    //* 暗色遮蓋
     &::before {
       content: "";
       position: absolute;
@@ -32,10 +35,12 @@
     }
   }
 
+  //* 主要文字
   &__layout-title {
     text-align: center;
   }
 
+  //* Go Home 按鈕
   &__btn {
     display: inline-block;
     margin-top: 3rem;
