[修改] Home.js hero swiper 文字大小 / HomeGenresSwiper 文字限制成 1 行 / 修復 Movie.js 卡片文字無法省略的問題 / 取消在 watchlist 使用的 AnimationOnScroll

--- a/src/pages/Home/_Home.scss
+++ b/src/pages/Home/_Home.scss
@@ -8,8 +8,8 @@
     @include flex($dir: column);
     @include x-spacing;
     margin-top: 4rem;
+    row-gap: 2rem;
     @include md {
-      row-gap: 2rem;
     }
   }
 
@@ -154,7 +154,7 @@
   // 電影標題
   &__slide-title {
     @include text(5xl);
-    @include lg {
+    @include xl {
       @include text(4xl);
     }
     @include sm {
@@ -178,7 +178,7 @@
   &__slide-overview {
     max-width: 43.75rem;
     @include text(xl);
-    @include lg {
+    @include xl {
       @include text(lg);
     }
     @include sm {
