--- a/src/scss/abstracts/_mixin.scss
+++ b/src/scss/abstracts/_mixin.scss
@@ -223,6 +223,10 @@
     -webkit-box-orient: vertical;
     white-space: normal;
     text-overflow: clip;
+  } @else if ($line-clamp == 1) {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   } @else {
     overflow: hidden;
     display: -webkit-box;
