--- a/src/scss/animation/_animation.scss
+++ b/src/scss/animation/_animation.scss
@@ -21,10 +21,20 @@
   50% {
     transform: translateY(0);
   }
-  
   100%{
     transform: translateY(0);
     visibility: visible;
     opacity: 1;
+  }
+}
+
+// 淡入(使用於 .movies)
+@keyframes fade-in {
+  from {
+    opacity: 0;
+    // visibility: hidden;
+  } to {
+    opacity: 1;
+    // visibility: visible;
   }
 }
