--- a/src/scss/animation/_animation.scss
+++ b/src/scss/animation/_animation.scss
@@ -16,7 +16,7 @@
   }
 }
 
-// 讓元素以「淡出+下滑」的方式顯示
+// 讓元素以「淡入+下滑」的方式顯示
 @keyframes show {
   50% {
     transform: translateY(0);
@@ -25,16 +25,5 @@
     transform: translateY(0);
     visibility: visible;
     opacity: 1;
-  }
-}
-
-// 淡入(使用於 .movies)
-@keyframes fade-in {
-  from {
-    opacity: 0;
-    // visibility: hidden;
-  } to {
-    opacity: 1;
-    // visibility: visible;
   }
 }
