--- a/src/scss/animation/_animation.scss
+++ b/src/scss/animation/_animation.scss
@@ -21,9 +21,16 @@
   50% {
     transform: translateY(0);
   }
-  100%{
+  100% {
     transform: translateY(0);
     visibility: visible;
     opacity: 1;
+  }
+}
+
+@keyframes scale-down {
+  100% {
+    opacity: 0;
+    transform: scale(0.3);
   }
 }
