[修改] 將 watchStatusTag 改名為 currentWatchStatus / [新增] watchcard 動畫 / watchlist__status-btn 閃爍動畫

--- a/src/pages/Watchlist/_Watchlist.scss
+++ b/src/pages/Watchlist/_Watchlist.scss
@@ -32,6 +32,10 @@
     &.active {
       background-color: map-get($color, tertiary);
     }
+    // 閃爍
+    &.flashing-animation {
+      animation: flashing map-get($transition, 1200);
+    }
     // 最後一個 status-btn
     &:last-child {
       border-left: 0;
