--- a/src/scss/animation/_animation.scss
+++ b/src/scss/animation/_animation.scss
@@ -1,3 +1,5 @@
+@use "../abstracts" as *;
+
 // 元素橫向左右移動
 @keyframes x-moving {
   from {
@@ -32,5 +34,23 @@
   100% {
     opacity: 0;
     transform: scale(0.3);
+  }
+}
+
+@keyframes flashing {
+  0% {
+    background-color: transparent;
+  }
+  25% {
+    @include hover-bg-color(map-get($color, tertiary));
+  }
+  50% {
+    background-color: transparent;
+  }
+  75% {
+    @include hover-bg-color(map-get($color, tertiary));
+  }
+  100% {
+    background-color: transparent;
   }
 }
