[修正] watchlist__status-btns 小錯誤修正

--- a/src/pages/Watchlist/_Watchlist.scss
+++ b/src/pages/Watchlist/_Watchlist.scss
@@ -30,6 +30,7 @@
     }
     // status-btn 的 active 狀態
     &.active {
+      animation: none ;
       background-color: map-get($color, tertiary);
     }
     // 閃爍
