--- a/src/components/SearchResult/_SearchResult.scss
+++ b/src/components/SearchResult/_SearchResult.scss
@@ -62,10 +62,13 @@ $search-results-gap-amount: (
   &__poster {
     width: 10.3125rem;
     height: 100%;
+    max-height: 14.375rem;
+    object-fit: cover;
     align-self: start;
     @include md {
-      border-radius: map-get($border-radius, base);
       width: 100%;
+      max-height: none;
+      border-radius: map-get($border-radius, base);
     }
   }
 
