--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -56,6 +56,8 @@
     @include md {
       @include text(2xl);
       @include flex($dir: column);
+      position: relative;
+      z-index: 1;
       color: map-get($color, primary);
     }
   }
@@ -74,7 +76,6 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: -5;
     width: 100%;
     height: 100vh;
     flex-direction: column;
