--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -57,7 +57,7 @@
       @include text(2xl);
       @include flex($dir: column);
       position: relative;
-      z-index: 1;
+      z-index: 11;
       color: map-get($color, primary);
     }
   }
@@ -74,8 +74,9 @@
     opacity: 0;
     visibility: hidden;
     position: fixed;
-    top: 0;
-    left: 0;
+    // top: 0;
+    // left: 0;
+    inset: 0;
     width: 100%;
     height: 100vh;
     flex-direction: column;
@@ -102,6 +103,7 @@
     @include md {
       opacity: 1;
       visibility: visible;
+      z-index: 10;
       // 將 nav 的所有直接子層(.nav__link) 設定 nav 開啟後的樣式
       @for $i from 1 through 6 {
         & > :nth-child(#{$i}) {
